@@ -1,5 +1,3 @@
-import org.jetbrains.kotlin.gradle.dsl.JvmTarget
-
 plugins {
     val kotlinVersion = "2.2.0"
 
@@ -37,9 +35,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-validation")
     implementation("org.springframework.boot:spring-boot-starter-data-jdbc")
     implementation("org.springframework.boot:spring-boot-configuration-processor")
-    
-    implementation("org.jetbrains.kotlin:kotlin-reflect")
-    implementation("org.jetbrains.kotlin:kotlin-stdlib")
+
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
 
     implementation("no.nav.common:job:$commonVersion")
@@ -47,7 +43,7 @@ dependencies {
     implementation("no.nav.common:kafka:$commonVersion") {
         exclude("org.apache.avro", "avro")
         exclude("org.xerial.snappy", "snappy-java")
-        exclude("io.confluent","kafka-avro-serializer")
+        exclude("io.confluent", "kafka-avro-serializer")
     }
 
     implementation("org.flywaydb:flyway-core")
@@ -60,31 +56,35 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:$okHttpVersion")
     runtimeOnly("org.postgresql:postgresql")
 
-    testImplementation("org.testcontainers:testcontainers:$testcontainersVersion")
     testImplementation("org.testcontainers:postgresql:$testcontainersVersion")
     testImplementation("org.testcontainers:kafka:$testcontainersVersion")
-    testImplementation("org.junit.jupiter:junit-jupiter-engine")
-    testImplementation("org.junit.jupiter:junit-jupiter-api")
     testImplementation("no.nav.security:mock-oauth2-server:$mockOauth2ServerVersion")
     testImplementation("com.squareup.okhttp3:mockwebserver:$okHttpVersion")
+    testImplementation("org.springframework.boot:spring-boot-testcontainers")
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
         exclude("com.vaadin.external.google", "android-json")
     }
-    testImplementation("io.mockk:mockk:$mockkVersion")
-}
-
-tasks.getByName<org.springframework.boot.gradle.tasks.bundling.BootJar>("bootJar") {
-    this.archiveFileName.set("${archiveBaseName.get()}.${archiveExtension.get()}")
+    testImplementation("io.mockk:mockk-jvm:$mockkVersion")
 }
 
 kotlin {
-	compilerOptions {
-		freeCompilerArgs.add("-Xjsr305=strict")
-		freeCompilerArgs.add("-Xannotation-default-target=param-property")
-		jvmTarget = JvmTarget.JVM_21
-	}
+    jvmToolchain(21)
+    compilerOptions {
+        freeCompilerArgs.addAll(
+            "-Xjsr305=strict",
+            "-Xannotation-default-target=param-property"
+        )
+    }
 }
 
-tasks.withType<Test> {
+tasks.jar {
+    enabled = false
+}
+
+tasks.test {
     useJUnitPlatform()
+    jvmArgs(
+        "-Xshare:off",
+        "-XX:+EnableDynamicAgentLoading"
+    )
 }
